# yazilim-lab-2-web-ders-programi

./: .gitignore  README.md  pyproject.toml
data/: ornek_veriler.json
src/web_ders_programi/: __init__.py  app.py  excel_exporter.py  models.py  repository.py  scheduler.py
src/web_ders_programi/templates/: base.html  course_form.html  courses.html  index.html  instructors.html  rooms.html  schedule.html
tests/: test_excel_exporter.py  test_scheduler.py
