[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "web-ders-programi"
version = "1.0.0"
description = "Yazılım Lab II için web arayüzünden otomatik ders programı oluşturma uygulaması"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
web-ders-programi = "web_ders_programi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
web_ders_programi = ["templates/*.html"]
